--- a/ximeraUserManual/workflow/workflow.tex
+++ b/ximeraUserManual/workflow/workflow.tex
@@ -61,6 +61,7 @@ are good and can skip this. If not, and it responds with
 need to change to SSH, read on!
 
 First we must create the key. There are instructions on \link[GitHub's
+
       pages]{https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent}
 Once the key is created, go to your personal GitHub page, like
 \verb!https://github.com/bartsnapp! and:
@@ -111,43 +112,30 @@ choose to take this path, we strongly recommend running:
 git config --global core.editor "nano"
 \end{verbatim}
 for an easy to use text editor that is not \verb!vi!. If for some chance you
-accidently enter \verb!vi! by typing \verb!git commit!, you'll know you are in \verb!vi! because the terminal won't work and the left hand side is filled with \verb!~!, 
+accidently enter \verb!vi! by typing \verb!git commit!, you'll know you are in
+\verb!vi! because the terminal won't work and the left hand side is filled with
+\verb!~!,
 \begin{center}
-press \verb!Esc! \quad then press \verb!:!\quad then press \verb!q! \quad then press \verb#!# \quad then press \verb!Enter!
+      press \verb!Esc! \quad then press \verb!:!\quad then press \verb!q! \quad then
+      press \verb#!# \quad then press \verb!Enter!
 \end{center}
- Then run the code above so that it never happens again.
+Then run the code above so that it never happens again.
 
 \paragraph{Adding images and PDFs with \texttt{git}}
 
-All files need to be commited to the GitHub repository.
-Now return to the terminal window, which should still be in the
-directory
-\verb!theExampleCourse!. You need to add the file (and the directory
-containing
-it) to git and commit your changes, and also tell it who you are.
+We typically add \verb!*.jpg!, \verb!*.png! and !*.pdf! to the
+\verb!.gitignore! file. However this makes it a little tricky to add graphics.
+In this case you \textit{force} the add with \verb!-f!:
 \begin{verbatim}
-git add anExampleCourse.tex
-git commit -m "this is my first course"
+git add -f SOME-GRAPHICS.jpg
 \end{verbatim}
 
-Every time you add or change files, you will need to run \verb!git add!
-and
-\verb!git commit -m "short description of changes"! to commit the
-changes to
-the server. The description of changes is necessary to commit, as is
-the
-\verb! -m!. If you are changing multiple files, you can use
-\verb!git add -u!.
 
-Now add this file to git and commit your changes. Back in the terminal,
-change to the directory \verb!anExampleCourse!
-and execute the following commands
-\begin{verbatim}
-git add theFirstActivity.tex
-git commit -m "Added first activity file"
-\end{verbatim}
 
 \section{Deploying and debugging}
+
+
+
 
 \begin{verbatim}
 ./scripts/xmlatex -i bash
@@ -157,5 +145,77 @@ pdflatex FILE-NAME.tex
 \end{verbatim}
 
 Slowly move \verb!\end{document}! down a document.
+
+
+Sometimes Ximera materials look good to instructors an others, but not to some individual students. 
+
+
+Common Solutions to Student Issues
+
+In this document we give several common problems that students may have when working with Ximera, and their solutions.
+Ximera refreshes the page when submitting
+
+This problem can be caused by several issues, each with a different solution:
+
+    Problem: Poor internet connection
+        Solution: Refresh the page immediately before entering each answer.
+    Problem: Browser settings
+        Solution: Try using a different browser. Different students have reported luck with different browsers, including Edge, Firefox, and Chrome.
+    Problem: Antivirus Software
+        Solution: Some antivirus softwares (such as McAfree) are now blocking websockets, a technology Ximera relies on. Try turning off the websockets setting on the antivirus
+    Problem: VPN
+        Solution: If you are using a VPN, try turning it off before using Ximera.
+
+Difficulty accessing Ximera
+
+Most problems viewing or accessing Ximera are caused by browser settings. The easiest solution is usually to try using a different browser. Students seem to have the best luck with Chrome, Firefox, or Safari.
+
+    Be sure to access Ximera from a link in your Carmen course
+    Open your Carmen course through a browser and not the Canvas App
+    Do not create a Ximera account or log into Ximera. You should be automatically logged in from Carmen. If you are asked to log in, the connection to Carmen is broken.
+    If Ximera is not being displayed correctly, try using a different browser.
+    If the Ximera website displays a three digit error code, the website is having technical difficulties. Wait a little while and try accessing the site again. * You may want to screenshot the error code in case you need to document your technical difficulties with your instructor.
+
+Work not being recorded
+
+This is almost always avoided by doing the following:
+
+    Log in to Carmen. If you've already been logged in for more than 3 hours, log out of Carmen and log back in.
+    Go to "Assignments"
+    Click on the Ximera assignment. It should show you a button to load the assignment in a new window.
+    You should be at your assignment, and if you look in the upper corner (at least on a computer) it should say your name.
+    Do your work.
+    Click save before you leave a page. (You don't need to worry about it unless you leave the page)
+
+Your score will be submitted to Carmen within the hour.
+Math processing error
+
+This is caused by an error in the browser setting. Two things to try:
+First possible solution:
+
+    Clear browser cookies
+    Close the browser.
+    Open the browser and log in to Carmen.
+    Go to the assignment.
+
+Second possible solution:
+
+    Find one of the pages this is happening,
+    Put your mouse over the "math processing error"
+    Now, "right-click" and select "accessibility" If collapsible math is checked, uncheck it.
+    Reload the page.
+
+Using Ximera on an iPad
+
+Be sure to access Ximera via Carmen using a browser such as Safari or Chrome
+
+    If you are having trouble accessing the Math Editor, be sure you have updated your iPad software to the latest version.
+    If you are having trouble with auto-capitalization in Ximera, you can:
+    Hit shift twice before entering an answer to get a lower case letter.
+    Turn off auto-capitalization on your iPad by going to Settings -> General -> Keyboards and toggling off auto-capitalization.
+
+
+
+
 
 \end{document}
